--- a/todo/main.css
+++ b/todo/main.css
@@ -15,13 +15,15 @@
   width: 1155px;
 }
 .element {
-  display: inline-flex;
+  display: inline-block;
   justify-content: space-between;
   width: 1271px;
   margin-block: 0px;
   border: 1px solid black;
 }
 .buttons {
+  vertical-align: auto;
+  /* display: block; */
   text-align: right;
   margin-left: auto;
   margin-top: auto;
@@ -30,7 +32,7 @@
 }
 .textOfMission {
   word-break: break-all;
-  vertical-align: center;
+  vertical-align: middle;
   margin-top: auto;
   margin-bottom: auto;
   margin-block: 0px;
